WIP: An alternate ProblemDetails implementation
Experimenting with a different way of implementing RFC 9457 for error
responses in Goa.
