# internal/dips/api/gen/di_ps/service.go
@@ -89,11 +89,8 @@ type DateTime string
 // DocKey is the document key used to create a DIP.
 type DocKey string
 
-// ObjectKey represents the object store key for a DIP.
-type ObjectKey string
-
-// ProblemDetails represents an RFC 9457 problem details object.
-type ProblemDetails struct {
+// An internal server error occurred.
+type InternalError struct {
 	// The type field contains a URI reference that identifies the problem type.
 	Type string
 	// The title field contains a short, human-readable summary of the problem type.
@@ -109,6 +106,52 @@ type ProblemDetails struct {
 	Instance *string
 }
 
+// One or more request parameters are missing.
+type MissingReqParamError struct {
+	// The title field contains a short, human-readable summary of the problem type.
+	Title string
+	// The detail field contains a human-readable explanation specific to this
+	// problem occurrence.
+	Detail string
+	// The status field contains the HTTP status code generated by the origin
+	// server.
+	Status int32
+	// The type field contains a URI reference that identifies the problem type.
+	Type string
+	// The code field contains a machine-readable error code.
+	Code *string
+	// A list of parameter errors.
+	Errors []*ParamError
+}
+
+// The requested resource is not found.
+type NotFoundError struct {
+	// The type field contains a URI reference that identifies the problem type.
+	Type string
+	// The title field contains a short, human-readable summary of the problem type.
+	Title string
+	// The detail field contains a human-readable explanation specific to this
+	// problem occurrence.
+	Detail string
+	// The status field contains the HTTP status code generated by the origin
+	// server.
+	Status int32
+	// The instance field contains a URI reference that identifies this problem
+	// occurrence.
+	Instance *string
+}
+
+// ObjectKey represents the object store key for a DIP.
+type ObjectKey string
+
+// ParamError represents an error related to a specific request parameter.
+type ParamError struct {
+	// The detail field describes the error.
+	Detail *string
+	// The parameter field contains the name of the parameter that caused the error.
+	Parameter *string
+}
+
 // ShowPayload is the payload type of the DIPs service show method.
 type ShowPayload struct {
 	// The token field contains the OIDC bearer token.
@@ -117,19 +160,105 @@ type ShowPayload struct {
 	ID DIPID
 }
 
+// The request is unauthorized due to missing or invalid authentication
+// credentials.
+type UnauthorizedError struct {
+	// The type field contains a URI reference that identifies the problem type.
+	Type string
+	// The title field contains a short, human-readable summary of the problem type.
+	Title string
+	// The detail field contains a human-readable explanation specific to this
+	// problem occurrence.
+	Detail string
+	// The status field contains the HTTP status code generated by the origin
+	// server.
+	Status int32
+	// The instance field contains a URI reference that identifies this problem
+	// occurrence.
+	Instance *string
+}
+
 // Error returns an error description.
-func (e *ProblemDetails) Error() string {
-	return "ProblemDetails represents an RFC 9457 problem details object."
+func (e *InternalError) Error() string {
+	return "An internal server error occurred."
 }
 
 // ErrorName returns the error name.
 //
 // Deprecated: Use GoaErrorName - https://github.com/goadesign/goa/issues/3105
-func (e *ProblemDetails) ErrorName() string {
+func (e *InternalError) ErrorName() string {
 	return e.GoaErrorName()
 }
 
 // GoaErrorName returns the error name.
-func (e *ProblemDetails) GoaErrorName() string {
-	return e.Type
+func (e *InternalError) GoaErrorName() string {
+	return "internal"
+}
+
+// Error returns an error description.
+func (e *MissingReqParamError) Error() string {
+	return "One or more request parameters are missing."
+}
+
+// ErrorName returns the error name.
+//
+// Deprecated: Use GoaErrorName - https://github.com/goadesign/goa/issues/3105
+func (e *MissingReqParamError) ErrorName() string {
+	return e.GoaErrorName()
+}
+
+// GoaErrorName returns the error name.
+func (e *MissingReqParamError) GoaErrorName() string {
+	return "missing_req_param"
+}
+
+// Error returns an error description.
+func (e *NotFoundError) Error() string {
+	return "The requested resource is not found."
+}
+
+// ErrorName returns the error name.
+//
+// Deprecated: Use GoaErrorName - https://github.com/goadesign/goa/issues/3105
+func (e *NotFoundError) ErrorName() string {
+	return e.GoaErrorName()
+}
+
+// GoaErrorName returns the error name.
+func (e *NotFoundError) GoaErrorName() string {
+	return "not_found"
+}
+
+// Error returns an error description.
+func (e *ParamError) Error() string {
+	return "ParamError represents an error related to a specific request parameter."
+}
+
+// ErrorName returns the error name.
+//
+// Deprecated: Use GoaErrorName - https://github.com/goadesign/goa/issues/3105
+func (e *ParamError) ErrorName() string {
+	return e.GoaErrorName()
+}
+
+// GoaErrorName returns the error name.
+func (e *ParamError) GoaErrorName() string {
+	return "ParamError"
+}
+
+// Error returns an error description.
+func (e *UnauthorizedError) Error() string {
+	return "The request is unauthorized due to missing or invalid authentication credentials."
+}
+
+// ErrorName returns the error name.
+//
+// Deprecated: Use GoaErrorName - https://github.com/goadesign/goa/issues/3105
+func (e *UnauthorizedError) ErrorName() string {
+	return e.GoaErrorName()
+}
+
+// GoaErrorName returns the error name.
+func (e *UnauthorizedError) GoaErrorName() string {
+	return "unauthorized"
 }
