# internal/dips/api/gen/http/openapi.json
@@ -91,13 +91,12 @@
       "title": "DIP",
       "type": "object"
     },
-    "ProblemDetails": {
-      "description": "The request parameters are invalid.",
+    "InternalError": {
       "example": {
         "detail": "The request body is missing the docKey field.",
         "status": 400,
         "title": "Invalid request parameters.",
-        "type": "/problems/not-valid"
+        "type": "about:blank"
       },
       "properties": {
         "detail": {
@@ -121,14 +120,9 @@
           "type": "string"
         },
         "type": {
+          "default": "about:blank",
           "description": "The type field contains a URI reference that identifies the problem type.",
-          "enum": [
-            "/problems/unauthorized",
-            "/problems/not-valid",
-            "/problems/not-found",
-            "/problems/internal-error"
-          ],
-          "example": "/problems/not-valid",
+          "example": "about:blank",
           "format": "uri",
           "type": "string"
         }
@@ -139,7 +133,184 @@
         "status",
         "detail"
       ],
-      "title": "ProblemDetails",
+      "title": "InternalError",
+      "type": "object"
+    },
+    "MissingReqParamError": {
+      "example": {
+        "code": "400-03",
+        "detail": "The request is missing an expected query or path parameter.",
+        "errors": [
+          {
+            "detail": "The 'docKey' field is required.",
+            "parameter": "docKey"
+          }
+        ],
+        "status": 400,
+        "title": "Missing Request Parameter",
+        "type": "https://problems-registry.smartbear.com/missing-request-parameter"
+      },
+      "properties": {
+        "code": {
+          "description": "The code field contains a machine-readable error code.",
+          "example": "400-03",
+          "type": "string"
+        },
+        "detail": {
+          "description": "The detail field contains a human-readable explanation specific to this problem occurrence.",
+          "example": "One or more request parameters are missing.",
+          "type": "string"
+        },
+        "errors": {
+          "description": "A list of parameter errors.",
+          "example": [
+            {
+              "detail": "The 'docKey' field is required.",
+              "parameter": "docKey"
+            }
+          ],
+          "items": {
+            "$ref": "#/definitions/ParamError"
+          },
+          "type": "array"
+        },
+        "status": {
+          "description": "The status field contains the HTTP status code generated by the origin server.",
+          "example": 400,
+          "format": "int32",
+          "type": "integer"
+        },
+        "title": {
+          "description": "The title field contains a short, human-readable summary of the problem type.",
+          "example": "Missing Request Parameter",
+          "type": "string"
+        },
+        "type": {
+          "default": "https://problems-registry.smartbear.com/invalid-request-body",
+          "description": "The type field contains a URI reference that identifies the problem type.",
+          "example": "https://problems-registry.smartbear.com/missing-request-parameter",
+          "format": "uri",
+          "type": "string"
+        }
+      },
+      "required": [
+        "type",
+        "title",
+        "status",
+        "detail"
+      ],
+      "title": "MissingReqParamError",
+      "type": "object"
+    },
+    "NotFoundError": {
+      "example": {
+        "detail": "The request body is missing the docKey field.",
+        "status": 400,
+        "title": "Invalid request parameters.",
+        "type": "about:blank"
+      },
+      "properties": {
+        "detail": {
+          "description": "The detail field contains a human-readable explanation specific to this problem occurrence.",
+          "example": "The request body is missing the docKey field.",
+          "type": "string"
+        },
+        "instance": {
+          "description": "The instance field contains a URI reference that identifies this problem occurrence.",
+          "type": "string"
+        },
+        "status": {
+          "description": "The status field contains the HTTP status code generated by the origin server.",
+          "example": 400,
+          "format": "int32",
+          "type": "integer"
+        },
+        "title": {
+          "description": "The title field contains a short, human-readable summary of the problem type.",
+          "example": "Invalid request parameters.",
+          "type": "string"
+        },
+        "type": {
+          "default": "about:blank",
+          "description": "The type field contains a URI reference that identifies the problem type.",
+          "example": "about:blank",
+          "format": "uri",
+          "type": "string"
+        }
+      },
+      "required": [
+        "type",
+        "title",
+        "status",
+        "detail"
+      ],
+      "title": "NotFoundError",
+      "type": "object"
+    },
+    "ParamError": {
+      "description": "ParamError represents an error related to a specific request parameter.",
+      "example": {
+        "detail": "The 'docKey' field is required.",
+        "parameter": "docKey"
+      },
+      "properties": {
+        "detail": {
+          "description": "The detail field describes the error.",
+          "example": "The 'docKey' field is required.",
+          "type": "string"
+        },
+        "parameter": {
+          "description": "The parameter field contains the name of the parameter that caused the error.",
+          "example": "docKey",
+          "type": "string"
+        }
+      },
+      "title": "ParamError",
+      "type": "object"
+    },
+    "UnauthorizedError": {
+      "example": {
+        "detail": "The request body is missing the docKey field.",
+        "status": 400,
+        "title": "Invalid request parameters.",
+        "type": "about:blank"
+      },
+      "properties": {
+        "detail": {
+          "description": "The detail field contains a human-readable explanation specific to this problem occurrence.",
+          "example": "The request body is missing the docKey field.",
+          "type": "string"
+        },
+        "instance": {
+          "description": "The instance field contains a URI reference that identifies this problem occurrence.",
+          "type": "string"
+        },
+        "status": {
+          "description": "The status field contains the HTTP status code generated by the origin server.",
+          "example": 400,
+          "format": "int32",
+          "type": "integer"
+        },
+        "title": {
+          "description": "The title field contains a short, human-readable summary of the problem type.",
+          "example": "Invalid request parameters.",
+          "type": "string"
+        },
+        "type": {
+          "default": "about:blank",
+          "description": "The type field contains a URI reference that identifies the problem type.",
+          "example": "about:blank",
+          "format": "uri",
+          "type": "string"
+        }
+      },
+      "required": [
+        "type",
+        "title",
+        "status",
+        "detail"
+      ],
+      "title": "UnauthorizedError",
       "type": "object"
     }
   },
@@ -185,7 +356,7 @@
           "400": {
             "description": "Bad Request response.",
             "schema": {
-              "$ref": "#/definitions/ProblemDetails",
+              "$ref": "#/definitions/MissingReqParamError",
               "required": [
                 "type",
                 "title",
@@ -197,7 +368,7 @@
           "401": {
             "description": "Unauthorized response.",
             "schema": {
-              "$ref": "#/definitions/ProblemDetails",
+              "$ref": "#/definitions/UnauthorizedError",
               "required": [
                 "type",
                 "title",
@@ -209,7 +380,7 @@
           "500": {
             "description": "Internal Server Error response.",
             "schema": {
-              "$ref": "#/definitions/ProblemDetails",
+              "$ref": "#/definitions/InternalError",
               "required": [
                 "type",
                 "title",
@@ -260,10 +431,22 @@
               ]
             }
           },
+          "400": {
+            "description": "Bad Request response.",
+            "schema": {
+              "$ref": "#/definitions/MissingReqParamError",
+              "required": [
+                "type",
+                "title",
+                "status",
+                "detail"
+              ]
+            }
+          },
           "401": {
             "description": "Unauthorized response.",
             "schema": {
-              "$ref": "#/definitions/ProblemDetails",
+              "$ref": "#/definitions/UnauthorizedError",
               "required": [
                 "type",
                 "title",
@@ -275,7 +458,7 @@
           "404": {
             "description": "Not Found response.",
             "schema": {
-              "$ref": "#/definitions/ProblemDetails",
+              "$ref": "#/definitions/NotFoundError",
               "required": [
                 "type",
                 "title",
@@ -287,7 +470,7 @@
           "500": {
             "description": "Internal Server Error response.",
             "schema": {
-              "$ref": "#/definitions/ProblemDetails",
+              "$ref": "#/definitions/InternalError",
               "required": [
                 "type",
                 "title",
